crates/ee-tests/src/snapshots/revm_ee_tests__eip8037__eip8037_create_with_sstore.snap
---
source: crates/ee-tests/src/eip8037.rs
expression: "&(baseline_result, result)"
---
[
  {
    "Success": {
      "reason": "Stop",
      "gas": {
        "gas_spent": 35121,
        "state_gas_spent": 0,
        "eip7702_state_refund": 0,
        "gas_refunded": 0,
        "floor_gas": 21000
      },
      "logs": [],
      "output": {
        "Call": "0x"
      }
    }
  },
  {
    "Success": {
      "reason": "Stop",
      "gas": {
        "gas_spent": 566127,
        "state_gas_spent": 531000,
        "eip7702_state_refund": 0,
        "gas_refunded": 0,
        "floor_gas": 21000
      },
      "logs": [],
      "output": {
        "Call": "0x"
      }
    }
  }
]
