crates/ee-tests/src/snapshots/revm_ee_tests__eip8037__eip8037_reservoir_refill_halt_vs_revert_difference.snap
---
source: crates/ee-tests/src/eip8037.rs
expression: "&(result_halt, result_revert)"
---
[
  {
    "Halt": {
      "reason": {
        "OutOfGas": "Basic"
      },
      "gas": {
        "gas_spent": 25000,
        "state_gas_spent": 0,
        "gas_refunded": 0,
        "floor_gas": 12000
      },
      "logs": []
    }
  },
  {
    "Revert": {
      "gas": {
        "gas_spent": 33112,
        "state_gas_spent": 0,
        "gas_refunded": 0,
        "floor_gas": 12000
      },
      "logs": [],
      "output": "0x"
    }
  }
]
